[gd_scene load_steps=18 format=2]

[ext_resource path="res://spriteframes/Player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/stats/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://sfx/characters/player/death/DEATH 1 (PLAYER).wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/characters/Player.gd" type="Script" id=17]
[ext_resource path="res://images/placeholders/circle of light.png" type="Texture" id=24]
[ext_resource path="res://src/helpers/StateLabel.tscn" type="PackedScene" id=29]
[ext_resource path="res://src/calculators/Hurtbox.tscn" type="PackedScene" id=38]
[ext_resource path="res://src/calculators/Hitbox.tscn" type="PackedScene" id=39]
[ext_resource path="res://src/calculators/SpellHitbox.tscn" type="PackedScene" id=40]
[ext_resource path="res://src/helpers/ScreenShakeGenerator.tscn" type="PackedScene" id=46]
[ext_resource path="res://src/effects/CastingCircle.tscn" type="PackedScene" id=57]
[ext_resource path="res://sfx/characters/enemies/captured/ENEMY CAPTURE 1.wav" type="AudioStream" id=58]
[ext_resource path="res://scripts/helpers/HitboxHandler.gd" type="Script" id=65]
[ext_resource path="res://sfx/characters/player/hurt/PLAYER HURT.wav" type="AudioStream" id=66]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 51.5552 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Body/AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"allies",
"player",
]]
position = Vector2( 0, -50 )
collision_layer = 2
script = ExtResource( 17 )

[node name="CanvasModulate" type="CanvasLayer" parent="."]

[node name="Health" parent="CanvasModulate" instance=ExtResource( 2 )]
margin_top = 13.948
margin_bottom = 238.948
rect_scale = Vector2( 1.5, 0.16 )
tint_progress = Color( 0.388235, 0.92549, 0.0941176, 1 )

[node name="ShadowSprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.301961 )
show_behind_parent = true
position = Vector2( -4.51251, 19.855 )
scale = Vector2( 0.25, 0.025 )
texture = ExtResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.77321 )
scale = Vector2( 1.36, 0.025 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": " 	"
}

[node name="Body" type="Area2D" parent="."]
position = Vector2( -1.67249, -27.294 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( -6.56415, 27.916 )
scale = Vector2( 1, 0.32 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
scale = Vector2( 2.5, 2.5 )
frames = ExtResource( 1 )
animation = "idle"

[node name="Hitboxes" type="Position2D" parent="Body/AnimatedSprite"]
script = ExtResource( 65 )

[node name="RunPunchHitbox" parent="Body/AnimatedSprite/Hitboxes" instance=ExtResource( 39 )]
position = Vector2( -9.34452, 8.66799 )
scale = Vector2( 2.19128, 1.14889 )

[node name="PunchHitbox" parent="Body/AnimatedSprite/Hitboxes" instance=ExtResource( 39 )]
position = Vector2( 9.78311, -0.0732489 )
scale = Vector2( 2.088, 2.12 )

[node name="SpellHitbox" parent="Body/AnimatedSprite/Hitboxes" instance=ExtResource( 40 )]
position = Vector2( 0, 18.4803 )
scale = Vector2( 5.784, 5.784 )

[node name="CastingCircle" parent="Body/AnimatedSprite/Hitboxes/SpellHitbox" instance=ExtResource( 57 )]
scale = Vector2( 0.035, 0.008 )

[node name="AirKickHitbox" parent="Body/AnimatedSprite/Hitboxes" instance=ExtResource( 39 )]
position = Vector2( 13.4305, 5.5743 )
scale = Vector2( 1.496, 2.168 )

[node name="Hurtboxes" type="Position2D" parent="Body/AnimatedSprite"]

[node name="Hurtbox" parent="Body/AnimatedSprite/Hurtboxes" instance=ExtResource( 38 )]
position = Vector2( 0, 3.52101 )
scale = Vector2( 0.472, 1.416 )

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.95, 0.95 )
limit_left = 0
limit_top = 0
limit_right = 1440
limit_bottom = 540

[node name="ScreenShakeGenerator" parent="Camera2D" instance=ExtResource( 46 )]

[node name="StateLabel" parent="." instance=ExtResource( 29 )]
margin_top = 11.8584
margin_bottom = 31.8584

[node name="Tween" type="Tween" parent="."]

[node name="Timers" type="Node2D" parent="."]

[node name="FrozenTimer" type="Timer" parent="Timers"]

[node name="HurtTimer" type="Timer" parent="Timers"]

[node name="RollCDTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="StunnedTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="Sounds" type="Node2D" parent="."]

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="MovementSound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="HurtSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 66 )

[node name="SpellSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 58 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="Body/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="Body/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="animation_finished" from="HurtAnimationPlayer" to="." method="_on_HurtAnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
